# marco-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-containerapp.yml
config/: marco.config.yaml
docs/: azure-deploy.md  cosmos-setup.md  microtasks.md
functions/: function_app.py  local.settings.sample.json
infra/: main.bicep
scripts/azure/: deploy-container-app.ps1  provision-container-app.ps1  provision-cosmos.ps1
scripts/e2e/: smoke.py
src/marco_agent/: __init__.py  config.py  discord_bot.py  logging_config.py  main.py  observability.py
src/marco_agent/ai/: __init__.py  foundry.py
src/marco_agent/services/: __init__.py  ai_search.py  attachment_ingestion.py  blob_storage.py  codex_execution.py  digest_scheduler.py  discord_delivery.py  file_rag.py  github_ops.py  memory_retrieval.py  news_digest.py  ngrok_manager.py  rag_indexing.py  rag_retrieval.py  secrets_provider.py
src/marco_agent/storage/: __init__.py  blob_files.py  cosmos_digest.py  cosmos_files.py  cosmos_memory.py  cosmos_tasks.py  search_index.py
src/marco_agent/tools/: __init__.py  news_tools.py  ops_tools.py  rag_tools.py  task_tools.py
tests/: test_attachment_ingestion_extractors.py  test_config.py  test_digest_scheduler.py  test_discord_helpers.py  test_discord_typing.py  test_execution_runner.py  test_file_rag.py  test_foundry_client.py  test_memory_retrieval.py  test_news_digest_service.py  test_news_tools.py  test_ops_tools.py  test_rag_tools.py  test_task_parser.py  test_task_tools.py
