[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marco-agent"
version = "0.1.0"
description = "Marco, an Azure-native AI Chief of Staff for Discord."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10.11",
  "azure-cosmos>=4.7.0",
  "discord.py>=2.5.2",
  "openai>=1.70.0",
  "pydantic>=2.11.1",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
